<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_management"
            android:title="@string/nav_management"
            android:icon="@drawable/ic_person"/>
        <item android:id="@+id/nav_find_f0"
            android:title="@string/nav_find_f0"
            android:icon="@drawable/ic_bluetooth"/>
        <item android:id="@+id/nav_edit"
            android:title="@string/nav_edit"
            android:icon="@drawable/ic_edit"/>

    </group>

    <item android:title="@string/nav_account">
        <menu>
            <item android:id="@+id/nav_logout"
                android:title="@string/nav_log_out"
                android:icon="@drawable/ic_logout"/>
        </menu>
    </item>




</menu>