<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BCD4"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="339dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="REGISTER"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:layout_centerInParent="true"
        android:visibility="gone" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3FFFFFF"
                    android:hint="@string/name"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3FFFFFF"
                    android:hint="@string/date_of_birth"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:inputType="date"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/social_insurance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3FFFFFF"
                    android:hint="@string/social_insurance"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="340dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nationalID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#F3FFFFFF"
                        android:hint="@string/national_id"
                        android:textSize="18sp"
                        android:textStyle="italic"
                        android:inputType="number"/>

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/ic_qr"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="10dp"
                    app:srcCompat="@drawable/ic_qr" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3FFFFFF"
                    android:hint="@string/address"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3FFFFFF"
                    android:hint="@string/phone_number"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/numberVaccine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3FFFFFF"
                    android:hint="@string/numberOfVaccine"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3FFFFFF"
                    android:hint="@string/email"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:inputType="textEmailAddress"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3FFFFFF"
                    android:hint="Password"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/registerUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="50dp"
                android:padding="10dp"
                android:paddingBottom="20dp"
                android:text="Register"
                android:textSize="20sp"
                android:backgroundTint="#958282"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>


