<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3FFFFFF"
                    android:hint="@string/name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_dateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3FFFFFF"
                    android:hint="@string/date_of_birth"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    android:inputType="datetime"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3FFFFFF"
                    android:hint="@string/address"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phoneNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3FFFFFF"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_numberVaccine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#F3FFFFFF"
                    android:hint="@string/numberOfVaccine"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </com.google.android.material.textfield.TextInputLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="300dp"
                    android:layout_marginTop="20dp"
                    android:gravity="right"
                    android:padding="10dp"
                    android:text="Save"
                    android:textSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>


    </ScrollView>


</LinearLayout>